--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
 
         <!-- main content section  -->
         <section class="main-content-part">
-            <!-- nan-munu -->
+            <!-- nav-munu -->
             <nav class="navbar navbar-expand-lg navbar-light navbar-menu">
                 <a class="navbar-brand d-lg-none" href="#">Navbar</a>
+                <!-- <button class="btn side-menu-btn">
+                    <i class="fas fa-stream"></i>
+                  </button> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -120,8 +123,8 @@
                         </li>
 
                     </ul>
-                    <div class="d-lg-flex align-items-center justify-content-center text-sm-center text-xs-center">
-                         <div class="position-relative right-3 mr-lg-3">
+                    <div class="d-flex align-items-center justify-content-center">
+                         <div class="mr-lg-3 notification-content">
                             <a type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="assets/Vector.png" alt="">
                                 <img src="assets/Vector (1).png" alt="" class="notification-icon">
@@ -138,14 +141,14 @@
                                 <div class="p-2">
                                     <div class="d-lg-flex d-md-flex justify-content-start align-items-center ">
                                         <img src="assets/RICSU 1.png" alt="" class="notification-image">
-                                        <p class="lg-pl-3">Lorem ipsum dolor sit amet.</p>
+                                        <p class="pl-3">Lorem ipsum dolor sit amet.</p>
                                     </div>
                                 </div>
                             </div>
 
                         </div>
                        
-                        <div class="position-relative right-3">
+                        <div class="position-lg-relative right-3">
                             <a type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="assets/RICSU 1.png" alt="" class="loging-user">
                             </a>
