--- a/setup.html
+++ b/setup.html
@@ -72,7 +72,7 @@
 
         </section>
         <section class="main-content-part">
-
+            <!-- nan-munu start -->
             <nav class="navbar navbar-expand-lg navbar-light navbar-menu">
                 <a class="navbar-brand d-lg-none" href="#">Navbar</a>
                 <!-- <button class="btn side-menu-btn">
@@ -159,9 +159,8 @@
 
                 </div>
             </nav>
-            <!-- nan-munu -->
-
-
+            <!-- nan-munu end -->
+            <!-- slider data form start  -->
             <div id="overlay">
                 <div id="content">
                     <div class="d-flex justify-content-between align-items-center title">
@@ -188,11 +187,13 @@
                                 <label for="">Users Type <span class="text-danger">*</span></label> <br>
                                 <div class="d-flex">
                                     <div>
-                                        <input type="radio" id="Label" name="label" value="Label" class="hide-select-client">
+                                        <input type="radio" id="Label" name="label" value="Label"
+                                            class="hide-select-client">
                                         <label for="html">Label</label><br>
                                     </div>
                                     <div class="ml-3">
-                                        <input type="radio" id="Label" name="label" value="Label" class="show-select-client">
+                                        <input type="radio" id="Label" name="label" value="Label"
+                                            class="show-select-client">
                                         <label for="html">Label</label><br>
                                     </div>
                                 </div>
@@ -211,6 +212,8 @@
 
                 </div>
             </div>
+             <!-- slider data form end  -->
+
             <!-- data table start  -->
             <div class="mt-5 mx-4 data-table">
                 <div class="mb-5 d-flex justify-content-between align-items-center">
@@ -221,7 +224,7 @@
 
                 </div>
 
-                <!-- Project Summary datatable start -->
+                
                 <div class="table-parrent">
                     <table id="example" class="display" style="width:100%">
                         <thead>
@@ -244,7 +247,7 @@
                                 <td>Specific</td>
                                 <td>Active</td>
                                 <td class="text-center">:</td>
-                               
+
                             </tr>
                             <tr>
                                 <td>001</td>
