add select input

--- a/setup.html
+++ b/setup.html
@@ -204,7 +204,10 @@
                             </div>
                             <div class="mt-3">
                                 <label for="">Status <span class="text-danger">*</span></label> <br>
-                                <input type="text" class="from-input" placeholder="Host" required>
+                                <select name="Status" id="active"  class="from-input">
+                                    <option value="Active"  class="select-input">Active</option>
+                                    <option value="Inactive"  class="select-input">Inactive</option>
+                                  </select>
                             </div>
 
                         </form>
