--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+                <a class="nav-link nav-sidevar-link mt-3" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ms-1 "> Dashboard</span>
