--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Project</a>
+                            <a class="nav-link active menu-link mr-2" aria-current="page" href="/project.html">Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
