--- a/projectDetails.html
+++ b/projectDetails.html
@@ -27,7 +27,7 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+                <a class="nav-link nav-sidevar-link mt-3" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ms-1 "> Dashboard</span>
@@ -88,7 +88,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Project</a>
+                            <a class="nav-link active menu-link mr-2" aria-current="page"
+                                href="/project.html">Project</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
@@ -168,10 +169,10 @@
                 </div>
 
                 <div class="all-project-container">
-                    <!-- all project sidebar start -->
+                    <!-- all project sidebar menu start -->
                     <div class="all-project-sidebar text-center">
                         <div class="mb-2 mt-2">
-                            <a href="" class="nav-link active">Backup</a>
+                            <a href="projectDetails.html" class="nav-link active">Backup</a>
                         </div>
                         <div class="mb-2">
                             <a href="" class="nav-link active">Unassign</a>
@@ -203,96 +204,138 @@
 
 
                     </div>
-                    <!-- all project sidebar end -->
+                    <!-- all project sidebar menu end -->
 
                     <!-- all project main contenter start -->
-                    <div class="all-project-content ">
-                        <!-- all project main content sidebar start  -->
-                        <div class="d-flex justify-content-between align-items-center project-nav">
-                            <div class="d-flex align-items-center">
-                                <div>
-                                    <a href="project.html"><img src="assets/All Project/vector.png" alt=""
-                                            class="mr-3 nav-icon"></a>
-                                </div>
-                                <div>
-                                    <img src="assets/All Project/vector2.png" alt="" class="mr-3 nav-icon2">
-                                </div>
-                                <div class="project-dri">
-                                    Backup
-                                </div>
-                            </div>
-                            <div>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="search-container">
-                                        <form>
-                                            <input type="text" placeholder="Search.." name="search">
-
-                                        </form>
+                    <div class="all-project-content">
+                        <div>
+                            <!--  project amin content top nav var start  -->
+                            <div class="d-flex justify-content-between align-items-center project-nav">
+                                <div class="d-flex align-items-center">
+                                    <div class="ml-3">
+                                        <a href="project.html"><img src="assets/All Project/vector.png" alt=""
+                                                class="mr-3 nav-icon"></a>
                                     </div>
-                                    <div class="ml-2">
-                                        <img src="assets/All Project/list-icon.png" alt="" class="icon-table">
-                                        <img src="assets/All Project/p-list-2.png" alt="" class="icon-picture">
+                                    <div>
+                                        <img src="assets/All Project/vector2.png" alt="" class="mr-3 nav-icon2">
+                                    </div>
+                                    <div class="project-dri">
+                                        Backup
                                     </div>
                                 </div>
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="mr-3 mt-2">
+                                            <label for="checkbox1" class="cleckbox-lebel mr-1">Select all</label>
+                                            <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                        </div>
+
+                                        <div class="search-container">
+                                            <form>
+                                                <input type="text" placeholder="Search.." name="search">
+
+                                            </form>
+                                        </div>
+                                        <div class="ml-2">
+                                            <img src="assets/All Project/list-icon.png" alt="" class="icon-table">
+                                            <img src="assets/All Project/p-list-2.png" alt="" class="icon-picture">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!--project amin content top nav var end  -->
+
+                            <!-- project show in picture start -->
+                            <div class="project-image-folder mx-4 mt-4">
+                                <div class="image-container">
+                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                    <div class="mt-4 d-flex justify-content-around align-items-center">
+                                        <p class="mt-2">Lorem ipsum</p>
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
+                                    </div>
+
+                                </div>
+                                <div class="image-container">
+                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                    <div class="mt-4 d-flex justify-content-around align-items-center">
+                                        <p class="mt-2">Lorem ipsum</p>
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
+                                    </div>
+
+                                </div>
+                                <div class="image-container">
+                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                    <div class="mt-4 d-flex justify-content-around align-items-center">
+                                        <p class="mt-2">Lorem ipsum</p>
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
+                                    </div>
+
+                                </div>
+                                <div class="image-container">
+                                    <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                    <div class="mt-4 d-flex justify-content-around align-items-center">
+                                        <p class="mt-2">Lorem ipsum</p>
+                                        <img src="assets/All Project//vector-details.png" alt=""
+                                            class="project-details-icon">
+                                    </div>
+
+                                </div>
 
                             </div>
+                            <!-- project show in picture end -->
+
+                            <!-- project show in table start -->
+                            <div class="mx-4 mt-4 project-show-table">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">SL</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Date Modified</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Size</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>Mark</td>
+                                            <td>Otto</td>
+                                            <td>@mdo</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- project show in table end -->
                         </div>
-                        <!-- all project main content sidebar end  -->
-
-                        <!-- project show in picture start -->
-                        <div class="project-image-folder mx-4 mt-4 ">
-
-                            <div>
-                                <img src="assets/All Project/FileManager - List View Item.png" alt=""
-                                    class="project-images">
-                            </div>
-                            <div>
-                                <img src="assets/All Project/FileManager - List View Item.png" alt=""
-                                    class="project-images">
-                            </div>
-                            <div>
-                                <img src="assets/All Project/FileManager - List View Item.png" alt=""
-                                    class="project-images">
-                            </div>
-                            <div>
-                                <img src="assets/All Project/FileManager - List View Item.png" alt=""
-                                    class="project-images">
-                            </div>
-                            <div>
-                                <img src="assets/All Project/FileManager - List View Item.png" alt=""
-                                    class="project-images">
-                            </div>
-
-                        </div>
-                        <!-- project show in picture end -->
-
-                        <!-- project show in table start -->
-                        <div class="mx-4 mt-4 project-show-table">
-                            <table class="table table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">SL</th>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Date Modified</th>
-                                        <th scope="col">Type</th>
-                                        <th scope="col">Size</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                    </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                        <!-- project show in table end -->
-
                     </div>
                     <!-- all project main contenter end -->
+
+                    <div class="project-side-details">
+                        <div class="d-flex justify-content-end mt-2 mb-5">
+                            <img src="assets/All Project/close-btn.png" alt="" class="close-button">
+                        </div>
+
+                        <div class="d-flex justify-content-center">
+                            <div class="image-container-details">
+                                <img src="assets/All Project/vector1111.png" alt="" class="project-image">
+                                <p class="mt-2">Lorem ipsum</p>
+                            </div>
+                        </div>
+
+                        <div class="mt-3 details-text ml-3">
+                            <p class="mb-3 mt-4">Type: Folder</p>
+                            <p>Image Quantity: 26</p>
+                            <p>Size: 150 Byte</p>
+                            <p>Date Created: <br> MM/DD/YYYY <br> XX:XX:XX AM</p>
+                            <p>Date Modified: <br> MM/DD/YYYY <br> XX:XX:XX AM</p>
+                        </div>
+                    </div>
                 </div>
 
 
