complete Client Project Sumary page

--- a/projectDetails.html
+++ b/projectDetails.html
@@ -170,7 +170,7 @@
 
                 <div class="all-project-container">
                     <!-- all project sidebar menu start -->
-                    <div class="all-project-sidebar text-center">
+                    <div class="all-project-sidebar">
                         <div class="mb-2 mt-2">
                             <a href="projectDetails.html" class="nav-link active">Backup</a>
                         </div>
