--- a/manager-deshboard.html
+++ b/manager-deshboard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/project.css">
     <link rel="stylesheet" href="css/manager-deshboard.css">
+    <link rel="stylesheet" href="css/client_project_Details.css">
 
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -66,12 +67,31 @@
                         <span class="sidebar-link-text ml-1">Final Check Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+               <!--  <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1">Penalty</span>
                     </div>
-                </a>
+                </a> -->
+                <div id="report">
+                    <a class="nav-link nav-sidevar-link" id="report-link">
+                        <div class="link-icon">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image" id="active-sidebar-icon-image">
+                            <span class="sidebar-link-text ml-2" id="report-text">
+                                Penalty
+                            </span>
+                            <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
+                        </div>
+                    </a>
+                    <div class="client-sumarry">
+                        <hr>
+                        <a class="nav-link nav-sidevar-link " href="#">
+                            <div class="link-icon">
+                                <span class="sidebar-link-text" id="Client_Summary_text">Pending Penalty</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="live-chat">
                 <p>Live Chat <span>(10)</span></p>
